--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,9 @@
 }
 
 body {
-  /*background-image: url('./assets/bg-pattern-11.png');*/
-  /*background-repeat: repeat;*/
-  background-color: #333333 !important;
+  background-image: url('./assets/bg-pattern-08.png');
+  background-repeat: repeat;
+  /*background-color: #333333 !important;*/
 }
 
 div#content {
