file uploader component added

--- a/src/app/add-listing/add-listing.component.html
+++ b/src/app/add-listing/add-listing.component.html
@@ -38,6 +38,9 @@
         </label>
       </div>
       <div class="form-group">
+        <app-file-uploader></app-file-uploader>
+      </div>
+      <div class="form-group">
         <label>
             <input type="file" name="displayImage">
         </label>
