--- a/src/app/add-listing/add-listing.component.scss
+++ b/src/app/add-listing/add-listing.component.scss
@@ -4,8 +4,7 @@
   display: flex;
   flex-flow: column wrap;
   >.inner-wrapper {
-    margin-top: auto;
-    margin-bottom: auto;
+    margin: 5vh;
   }
 }
 
