lil fix - now only logged users can see make offer btn

--- a/src/app/items/single-item/single-item.component.html
+++ b/src/app/items/single-item/single-item.component.html
@@ -13,5 +13,5 @@
 
     <!--TODO add right make offer link when ready-->
 
-    <a *ngIf="!this.item.isOwner" class="btn btn-primary" routerLink="/gallery/{{this.item._id}}">Make Offer</a>
+    <a *ngIf="this.isLogged && !this.item.isOwner" class="btn btn-primary" routerLink="/gallery/{{this.item._id}}">Make Offer</a>
 </div>
