uploading multiple files

--- a/src/app/file-uploader/file-uploader.component.html
+++ b/src/app/file-uploader/file-uploader.component.html
@@ -5,25 +5,19 @@
   </label>
 </label>-->
 <!-- app.component.html -->
-<input type="file"
-       ngFileSelect
-       [options]="options"
-       (onUpload)="handleUpload($event)"
-       (beforeUpload)="beforeUpload($event)">
+<input type="file" ngFileSelect [options]="options" (onUpload)="handleUpload($event)" (beforeUpload)="beforeUpload($event)">
 
 <!-- drag & drop file example-->
 <style>
   .file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
 </style>
-<div ngFileDrop
-     [options]="options"
-     (onUpload)="handleUpload($event)"
-     [ngClass]="{'file-over': hasBaseDropZoneOver}"
-     (onFileOver)="fileOverBase($event)"
-     (beforeUpload)="beforeUpload($event)">
+<div ngFileDrop [options]="options" (onUpload)="handleUpload($event)" [ngClass]="{'file-over': hasBaseDropZoneOver}" (onFileOver)="fileOverBase($event)"
+  (beforeUpload)="beforeUpload($event)">
 </div>
 
 <div>
-Response: {{ uploadFile | json }}
-<img *ngIf="uploadFile" [src]="uploadFile.imageUrl" alt="" width="300px">
+  Response: {{ uploadFile | json }}
+  <div *ngIf="uploadFiles.length > 0">
+    <img *ngFor="let file of uploadFiles " [src]="file.imageUrl" alt="" width="300px">
+  </div>
 </div>
