--- a/src/app/add-listing/add-listing.component.html
+++ b/src/app/add-listing/add-listing.component.html
@@ -38,7 +38,7 @@
         </label>
       </div>
       <div class="form-group">
-        <app-file-uploader></app-file-uploader>
+        <app-file-uploader (onFileUpload)="onFileUpload($event)"></app-file-uploader>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-success">Submit</button>
