--- a/src/app/file-uploader/file-uploader.component.html
+++ b/src/app/file-uploader/file-uploader.component.html
@@ -5,8 +5,9 @@
   </label>
 </label>-->
 <!-- app.component.html -->
-<input type="file" ngFileSelect [options]="options" (onUpload)="handleUpload($event)" (beforeUpload)="beforeUpload($event)">
-
+<label class="btn btn-default btn-file">
+  Upload Image <input style="display: none;" type="file" ngFileSelect [options]="options" (onUpload)="handleUpload($event)" (beforeUpload)="beforeUpload($event)" accept="image/*">
+</label>
 <!-- drag & drop file example-->
 <style>
   .file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
@@ -15,9 +16,6 @@
   (beforeUpload)="beforeUpload($event)">
 </div>
 
-<div>
-  Response: {{ uploadFile | json }}
-  <div *ngIf="uploadedFiles.length > 0">
-    <img *ngFor="let file of uploadedFiles " [src]="file.imageUrl" alt="" width="300px">
-  </div>
+<div *ngIf="uploadedFiles.length > 0" class="well" id="uploaded">
+  <img *ngFor="let file of uploadedFiles " [src]="file.imageUrl" height="150px" alt="image">
 </div>
