--- a/src/app/file-uploader/file-uploader.component.scss
+++ b/src/app/file-uploader/file-uploader.component.scss
@@ -26,3 +26,39 @@
 //     background-color: #c83f43;
 //   }
 // }
+@font-face {
+  font-family: planer;
+  src: url('../../assets/Planer-Regular.otf');
+}
+
+label {
+  font-family: planer;
+  font-size: 16px;
+  color: rgba(225, 225, 225, 0.77);
+  background-color: #2f2f2f;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  &:hover {
+    font-size: 16px;
+    color: rgba(225, 225, 225, 0.77);
+    background-color: lighten( #2f2f2f, 10);
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+}
+
+label,
+input {
+  width: 250px;
+}
+
+img {
+  padding: 10px;
+}
+
+.well {
+  background-color: transparent;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  margin-top: 25px;
+}
