--- a/src/app/file-uploader/file-uploader.component.scss
+++ b/src/app/file-uploader/file-uploader.component.scss
@@ -26,20 +26,15 @@
 //     background-color: #c83f43;
 //   }
 // }
-@font-face {
-  font-family: planer;
-  src: url('../../assets/Planer-Regular.otf');
-}
-
 label {
-  font-family: planer;
-  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 12px;
   color: rgba(225, 225, 225, 0.77);
   background-color: #2f2f2f;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   &:hover {
-    font-size: 16px;
+    font-size: 12px;
     color: rgba(225, 225, 225, 0.77);
     background-color: lighten( #2f2f2f, 10);
     border-bottom-left-radius: 0;
