--- a/src/app/users/register/register.component.scss
+++ b/src/app/users/register/register.component.scss
@@ -1,12 +1,7 @@
-@font-face {
-  font-family: planer;
-  src: url('../../assets/Planer-Regular.otf');
-}
-
 input,
 button {
-  font-family: planer;
-  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 12px;
   color: rgba(225, 225, 225, 0.77);
   background-color: #2f2f2f;
   border-radius: 0;
