--- a/src/app/add-listing/add-listing.component.scss
+++ b/src/app/add-listing/add-listing.component.scss
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: planer;
-  src: url('../../assets/Planer-Regular.otf');
-}
-
 .submit-wrapper {
   text-align: center;
   min-height: 60vh;
@@ -14,9 +9,9 @@
 }
 
 input {
-  font-family: planer;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
-  font-size: 16px;
+  font-size: 12px;
   color: rgba(225, 225, 225, 0.77);
   background-color: #2f2f2f;
   border-bottom-left-radius: 0;
