--- a/src/app/file-uploader/file-uploader.component.scss
+++ b/src/app/file-uploader/file-uploader.component.scss
@@ -27,6 +27,7 @@
 //   }
 // }
 label {
+  margin-top: 25px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 12px;
   color: rgba(225, 225, 225, 0.77);
