--- a/src/app/add-listing/add-listing.component.scss
+++ b/src/app/add-listing/add-listing.component.scss
@@ -16,6 +16,8 @@
 }
 
 .content-left {
+  opacity: 0.77;
+  box-shadow: 0 5px 25px black;
   background-image: url('../../assets/home-bg6.jpg');
   background-repeat: none;
 }
