--- a/src/app/add-listing/add-listing.component.html
+++ b/src/app/add-listing/add-listing.component.html
@@ -5,7 +5,7 @@
   <div class="inner-wrapper">
     <form *ngIf="!isLoading" #submitForm="ngForm" (ngSubmit)="onSubmit(); submitForm.reset()">
       <div id="inputs-container" class="row">
-        <div class="content-left col-xs-7 col-xs-offset-1">
+        <div class="content-left col-xs-8">
         </div>
         <div id="content-right" class="col-xs-4">
           <div class="well">
