--- a/src/app/add-listing/add-listing.component.scss
+++ b/src/app/add-listing/add-listing.component.scss
@@ -36,10 +36,11 @@
 }
 
 .content-left {
-  opacity: 0.77;
+  opacity: 0.99;
   box-shadow: 0 5px 25px black;
-  background-image: url('../../assets/home-bg9.jpg');
+  background-image: url('../../assets/home-bg10.jpg');
   background-repeat: none;
+  padding-left: 20px;
 }
 
 input {
