consistent navigation highliighting

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -32,7 +32,7 @@ nav {
     margin-top: 0px;
   }
   a.navbar-brand {
-    color: #fff;
+    color: rgba(225, 225, 225, 0.77);
     font-family: planer;
     font-size: 22px;
   }
