--- a/src/app/add-listing/add-listing.component.scss
+++ b/src/app/add-listing/add-listing.component.scss
@@ -43,6 +43,10 @@
   padding-left: 20px;
 }
 
+.form-group {
+  width: 100%;
+}
+
 input {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
@@ -51,7 +55,7 @@ input {
   background-color: #2f2f2f;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
-  width: 250px;
+  width: 100%;
   &.ng-valid.ng-touched {
     border-color: #55b559;
   }
@@ -61,7 +65,7 @@ input {
 }
 
 .btn.btn-success {
-  width: 250px;
+  width: 100%;
   background-color: #55b559;
 }
 
