--- a/src/app/items/single-item/single-item.component.html
+++ b/src/app/items/single-item/single-item.component.html
@@ -13,7 +13,7 @@
 
     <!--TODO add right make offer link when ready-->
 
-    <a *ngIf="this.isLogged && !this.isOwner" class="btn btn-primary" routerLink="/gallery/{{this.item._id}}">Make Offer</a>
+    <a *ngIf="this.isLogged && !this.isOwner" class="btn btn-primary" routerLink="/gallery/{{this.item._id}}/offer">Make Offer</a>
 
     <a class="btn btn-primary" routerLink="/gallery/{{this.item._id}}/offers">Show offers</a>
 </div>
