--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -1,6 +1,17 @@
-<div *ngFor="let item of this.items" class="gallery-item">
-    <app-carousel *ngIf="this.item && this.item.pictures && this.item.pictures.length > 0" [mylist]="this.item.pictures"></app-carousel>
-    <a routerLink="{{item._id}}">    
-        <h2>{{this.item.make}} {{this.item.model}} {{this.item.year}}</h2>
+<div class="submit-wrapper">
+  <div id="component-header">
+    <h3 *ngIf="this.items.length === 0">Dreamstime Gallery</h3>
+    <a *ngIf="this.items.length !== 0" routerLink="{{this.activeItem._id}}">
+      <h3>
+        <span>{{this.activeItem.make}}</span>
+        <span>{{this.activeItem.model}}</span>
+        <span>{{this.activeItem.year}}</span>
+      </h3>
     </a>
+  </div>
+  <div class="row">
+    <div id="carousel-container" class="col-xs-6 col-xs-offset-3">
+      <app-carousel *ngIf="this.activeItem" [mylist]="this.activeItem.pictures"></app-carousel>
+    </div>
+  </div>
 </div>
