--- a/src/app/carousel-list/carousel-list.component.scss
+++ b/src/app/carousel-list/carousel-list.component.scss
@@ -1,8 +1,11 @@
-.carousel {
-  max-height: 400px;
-  overflow: hidden;
-  .item img {
-    width: 100%;
-    height: 400px;
+.well {
+  background-color: transparent;
+  border: none;
+  .carousel {
+    max-height: 400px;
+    overflow: hidden;
+    .item img {
+      height: 400px;
+    }
   }
 }
