--- a/src/app/items/items-collection/items-collection.component.scss
+++ b/src/app/items/items-collection/items-collection.component.scss
@@ -16,12 +16,30 @@
   }
 }
 
-.gallery-item {
-    min-width: 300px;
-    max-width: 500px;
-    float:left;
-
-    a {
-        text-align: center;
+#controls {
+  border-top: 1px solid rgba(225, 225, 225, 0.77);
+  padding: 25px;
+  .btn {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    font-size: 12px;
+    color: rgba(225, 225, 225, 0.77);
+    background-color: #2f2f2f;
+    border-color: rgba(225, 225, 225, 0.77);
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    width: 100%;
+    &:hover {
+      background-color: lighten( #2f2f2f, 10);
     }
+  }
+}
+
+.gallery-item {
+  min-width: 300px;
+  max-width: 500px;
+  float: left;
+  a {
+    text-align: center;
+  }
 }
