--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -1,17 +1,34 @@
 <div class="submit-wrapper">
   <div id="component-header">
     <h3 *ngIf="this.items.length === 0">Dreamstime Gallery</h3>
-    <a *ngIf="this.items.length !== 0" routerLink="{{this.activeItem._id}}">
-      <h3>
-        <span>{{this.activeItem.make}}</span>
-        <span>{{this.activeItem.model}}</span>
-        <span>{{this.activeItem.year}}</span>
-      </h3>
-    </a>
+    <h3 *ngIf="this.items.length !== 0">
+      <span>{{this.activeItem.make}}</span>
+      <span>{{this.activeItem.model}}</span>
+      <span>{{this.activeItem.year}}</span>
+    </h3>
   </div>
   <div class="row">
     <div id="carousel-container" class="col-xs-6 col-xs-offset-3">
       <app-carousel *ngIf="this.activeItem" [mylist]="this.activeItem.pictures"></app-carousel>
+    </div>
+  </div>
+  <div id="controls">
+    <div class="row">
+      <div class="col-xs-2 col-xs-offset-1">
+        <a class="btn btn-primary" *ngIf="this.items.length !== 0">
+          Previous
+        </a>
+      </div>
+      <div class="col-xs-4 col-xs-offset-1">
+        <a class="btn btn-primary" *ngIf="this.items.length !== 0" routerLink="{{this.activeItem._id}}">
+          More Details
+        </a>
+      </div>
+      <div class="col-xs-2 col-xs-offset-1">
+        <a class="btn btn-primary" *ngIf="this.items.length !== 0">
+          Next
+        </a>
+      </div>
     </div>
   </div>
 </div>
