--- a/src/app/items/items-collection/items-collection.component.scss
+++ b/src/app/items/items-collection/items-collection.component.scss
@@ -20,6 +20,7 @@
   border-top: 1px solid rgba(225, 225, 225, 0.77);
   padding: 25px;
   .btn {
+    overflow: hidden;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     font-size: 12px;
