--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -15,7 +15,7 @@
   <div id="controls">
     <div class="row">
       <div class="col-xs-2 col-xs-offset-1">
-        <a class="btn btn-primary" *ngIf="this.items.length !== 0">
+        <a (click)="onPrevious()" class="btn btn-primary" *ngIf="this.items.length !== 0">
           Previous
         </a>
       </div>
@@ -25,7 +25,7 @@
         </a>
       </div>
       <div class="col-xs-2 col-xs-offset-1">
-        <a class="btn btn-primary" *ngIf="this.items.length !== 0">
+        <a (click)="onNext()" class="btn btn-primary" *ngIf="this.items.length !== 0">
           Next
         </a>
       </div>
