--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -8,12 +8,13 @@
     </h3>
   </div>
   <div class="row">
-    <div id="carousel-container" class="col-xs-8 col-xs-offset-2">
+    <h3 *ngIf="this.items.length === 0">Be the first to post a new item!</h3>
+    <div *ngIf="this.items.length !== 0" id="carousel-container" class="col-xs-8 col-xs-offset-2">
       <app-carousel *ngIf="this.activeItem" [mylist]="this.activeItem.pictures"></app-carousel>
     </div>
   </div>
   <div id="controls">
-    <div class="row">
+    <div *ngIf="this.items.length !== 0" class="row">
       <div class="col-xs-2 col-xs-offset-1">
         <a (click)="onPrevious()" class="btn btn-primary" *ngIf="this.items.length !== 0">
           Previous
