--- a/src/app/items/offers/offers-list.component.html
+++ b/src/app/items/offers/offers-list.component.html
@@ -1,6 +1,6 @@
 <h1>Offers list works .... maybe!</h1>
 
-<div *ngFor="let offer of this.item.offers.revese()" class="offer">
+<div *ngFor="let offer of this.item.offers" class="offer">
     <h3>{{offer.offeredPrice}}</h3>
     <p>By: {{offer.username}}</p>
 </div>
