--- a/src/app/items/offers/make-offer.component.html
+++ b/src/app/items/offers/make-offer.component.html
@@ -1,1 +1,15 @@
-<h1>Make offer works .... maybe!</h1>
+<div class="text-center">
+    <img src="{{this.item.pictures[0].imageURL}}">
+    <h3>StartPrice: {{this.item.price}}</h3>
+    <h3>Highest offer: {{this.maxOffer}}</h3>
+
+    <form *ngIf="!isLoading" #submitForm="ngForm" (ngSubmit)="onSubmit(); submitForm.reset()">
+        <div class="form-group">
+            <input appFormDefaultValue type="text" #ngPrice="ngModel" class="form-control" name="price" [(ngModel)]="offer.offeredPrice"
+                placeholder="Price" required minlength="1" maxlength="10" pattern="[0-9]+">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-success">Submit</button>
+        </div>
+    </form>
+</div>
