--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-    <a class="navbar-brand hvr-overline-reveal" (click)="setActiveItem()" routerLink="/">DREAMSTIME</a>
+    <a class="navbar-brand" (click)="setActiveItem()" routerLink="/">DREAMSTIME</a>
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div *ngIf="hasLoggedUser == true" class="collapse navbar-collapse navbar-ex1-collapse" id="bs-example-navbar-collapse-1">
