--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -5,6 +5,7 @@
       <span>{{this.activeItem.make}}</span>
       <span>{{this.activeItem.model}}</span>
       <span>{{this.activeItem.year}}</span>
+      <a class="add-to-favorites-btn"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></a>
     </h3>
   </div>
   <div class="row">
