--- a/src/app/items/items-collection/items-collection.component.scss
+++ b/src/app/items/items-collection/items-collection.component.scss
@@ -16,6 +16,16 @@
   }
 }
 
+.add-to-favorites-btn {
+  >span.glyphicon-heart {
+    font-size: 3rem;
+    color: #9D9D9D;
+  }
+  &:hover>span.glyphicon-heart {
+    color: #DF474B;
+  }
+}
+
 #controls {
   border-top: 1px solid rgba(225, 225, 225, 0.77);
   padding: 25px;
