--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -18,12 +18,12 @@
 
     <ul class="nav navbar-nav navbar-right">
       <li class="favorites-item">
-        <a routerLink="/favorites">
+        <a routerLink="/favorites" (click)="setActiveItem()">
           <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
         </a>
       </li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle hvr-overline-reveal" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{loggedUserName}}<span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{loggedUserName}}<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li (click)="setActiveItem('None')"><a routerLink='profile'>Profile</a></li>
           <li (click)="setActiveItem('None')"><a routerLink='profile'>Settings</a></li>
