--- a/src/app/items/items-collection/items-collection.component.scss
+++ b/src/app/items/items-collection/items-collection.component.scss
@@ -1,9 +1,13 @@
 #component-header {
-  color: rgba(225, 225, 225, 0.77);
-  background: transparent;
-  border-color: rgba(225, 225, 225, 0.77);
-  border-bottom: 1px solid rgba(225, 225, 225, 0.77);
-  box-shadow: 0 1px 25px black;
+  //   color: rgba(225, 225, 225, 0.77);
+  //   background: transparent;
+  //   border-color: rgba(225, 225, 225, 0.77);
+  //   border-bottom: 1px solid rgba(225, 225, 225, 0.77);
+  //   box-shadow: 0 1px 25px black;
+  //   padding: 20px;
+  * {
+    margin: 0;
+  }
 }
 
 .submit-wrapper {
@@ -17,8 +21,10 @@
 }
 
 .add-to-favorites-btn {
+  float: right;
   >span.glyphicon-heart {
-    font-size: 3rem;
+    cursor: pointer;
+    font-size: 3.5rem;
     color: #9D9D9D;
   }
   &:hover>span.glyphicon-heart {
