--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,17 +17,13 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <li class="favorites-item">
-        <a routerLink="/favorites" (click)="setActiveItem()">
-          <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-        </a>
-      </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{loggedUserName}}<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li (click)="setActiveItem('None')"><a routerLink='profile'>Profile</a></li>
-          <li (click)="setActiveItem('None')"><a routerLink='profile'>Settings</a></li>
+          <li (click)="setActiveItem('None')"><a routerLink='favorites'>Favorites</a></li>
           <li role="separator" class="divider"></li>
+          <li (click)="setActiveItem('None')"><a routerLink='profile'>Settings</a></li>
           <li (click)="setActiveItem('None')"><a routerLink="logout">Logout</a></li>
         </ul>
       </li>
