--- a/src/app/items/items-collection/items-collection.component.scss
+++ b/src/app/items/items-collection/items-collection.component.scss
@@ -25,7 +25,8 @@
   >span.glyphicon-heart {
     cursor: pointer;
     font-size: 3.5rem;
-    color: #9D9D9D;
+    color: #E6E6E6;
+    // color: #9D9D9D;
   }
   &:hover>span.glyphicon-heart {
     color: #DF474B;
