add to fav extracted to a component

--- a/src/app/users/add-to-favorites/add-to-favorites.component.html
+++ b/src/app/users/add-to-favorites/add-to-favorites.component.html
@@ -1,3 +1,3 @@
-<p>
-  add-to-favorites works!
-</p>
+<a class="add-btn">
+  <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+</a>
