--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -35,6 +35,9 @@ nav {
     color: rgba(225, 225, 225, 0.77);
     font-family: planer;
     font-size: 22px;
+    &:hover {
+      color: white;
+    }
   }
   li.favorites-item {
     &:hover span.glyphicon.glyphicon-heart {
