--- a/src/app/items/items-collection/items-collection.component.scss
+++ b/src/app/items/items-collection/items-collection.component.scss
@@ -1,13 +1,10 @@
 #component-header {
-  //   color: rgba(225, 225, 225, 0.77);
-  //   background: transparent;
-  //   border-color: rgba(225, 225, 225, 0.77);
-  //   border-bottom: 1px solid rgba(225, 225, 225, 0.77);
-  //   box-shadow: 0 1px 25px black;
-  //   padding: 20px;
-  * {
-    margin: 0;
-  }
+  color: rgba(225, 225, 225, 0.77);
+  background: transparent;
+  border-color: rgba(225, 225, 225, 0.77);
+  border-bottom: 1px solid rgba(225, 225, 225, 0.77);
+  box-shadow: 0 1px 25px black;
+  padding: 20px;
 }
 
 .submit-wrapper {
